--- a/public/popup.html
+++ b/public/popup.html
@@ -38,7 +38,7 @@
                     <img id="refresh-icon"src="media/refresh.png"/>
                 </button>
             </div> -->
-            <p>Show</p>
+            <p>Convert Temperature To:</p>
             <section class="options" aria-label="Conversion mode">
                 <label class="option">
                     <input type="radio" name="mode" value="c_to_f" />
@@ -49,7 +49,7 @@
                     <span>°C</span>
                 </label>
                 <label class="option">
-                    <input type="radio" name="mode" value="off" />
+                    <input type="radio" name="mode" value="off" checked="checked"/>
                     <span>Off</span>
                 </label>
             </section>
